--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
-    "@mui/icons-material": "^5.10.9"
+    "@mui/icons-material": "^5.10.9",
+    "mdbreact": "^5.2.0"
   }
 }
