--- a/package.json
+++ b/package.json
@@ -1,6 +1,16 @@
 {
   "dependencies": {
+    "@date-io/date-fns": "^1.3.13",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@material-ui/pickers": "^3.3.10",
+    "@mui/core": "^5.0.0-alpha.54",
     "@mui/icons-material": "^5.10.9",
-    "mdbreact": "^5.2.0"
+    "@mui/lab": "^5.0.0-alpha.107",
+    "@mui/material": "^5.10.13",
+    "@mui/x-date-pickers": "^5.0.8",
+    "date-fns": "^2.29.3",
+    "mdbreact": "^5.2.0",
+    "moment": "^2.29.4"
   }
 }
