--- a/back-end/package.json
+++ b/back-end/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.1.3",
+    "body-parser": "^1.20.1",
     "cheerio": "^1.0.0-rc.12",
     "express": "^4.18.2",
     "json2csv": "^5.0.7",
