--- a/back-end/package.json
+++ b/back-end/package.json
@@ -4,7 +4,7 @@
   "description": "The back-end of your project will live in this directory.",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha --no-timeouts",
     "start": "node server.js"
   },
   "author": "",
@@ -12,9 +12,12 @@
   "dependencies": {
     "axios": "^1.1.3",
     "body-parser": "^1.20.1",
+    "chai": "*",
     "cheerio": "^1.0.0-rc.12",
     "express": "^4.18.2",
     "json2csv": "^5.0.7",
+    "mocha": "*",
+    "nyc": "^15.1.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
