--- a/front-end/package.json
+++ b/front-end/package.json
@@ -20,6 +20,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
     "chart.js": "^3.9.1",
+    "date-fns": "^2.29.3",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-chartjs-2": "^4.3.1",
