--- a/back-end/package.json
+++ b/back-end/package.json
@@ -4,7 +4,7 @@
   "description": "The back-end of your project will live in this directory.",
   "main": "server.js",
   "scripts": {
-    "test": "mocha --no-timeouts",
+    "test": "nyc --reporter=text mocha --no-timeouts",
     "start": "node server.js"
   },
   "author": "",
@@ -17,10 +17,10 @@
     "express": "^4.18.2",
     "json2csv": "^5.0.7",
     "mocha": "*",
-    "nyc": "^15.1.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "nyc": "^15.1.0"
   }
 }
