--- a/back-end/package.json
+++ b/back-end/package.json
@@ -14,9 +14,11 @@
     "body-parser": "^1.20.1",
     "chai": "*",
     "cheerio": "^1.0.0-rc.12",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "json2csv": "^5.0.7",
     "mocha": "*",
+    "mongoose": "^6.7.2",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
