--- a/back-end/package.json
+++ b/back-end/package.json
@@ -11,15 +11,18 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.1.3",
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
     "chai": "*",
     "cheerio": "^1.0.0-rc.12",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "json2csv": "^5.0.7",
+    "jsonwebtoken": "^8.5.1",
     "mocha": "*",
     "mongoose": "^6.7.2",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20",
