--- a/back-end/package.json
+++ b/back-end/package.json
@@ -14,6 +14,7 @@
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
     "chai": "*",
+    "chai-http": "^4.3.0",
     "cheerio": "^1.0.0-rc.12",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
