--- a/back-end/package.json
+++ b/back-end/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^8.5.1",
     "mocha": "*",
     "mongoose": "^6.7.3",
+    "multer": "^1.4.5-lts.1",
     "uuid": "^9.0.0",
     "validator": "^13.7.0"
   },
