--- a/package.json
+++ b/package.json
@@ -1,4 +1,9 @@
 {
+  "scripts": {
+    "frondend" : "cd front-end && npm start",
+    "backend" : "cd back-end && nodemon start",
+    "start": "concurrently \"npm run frondend\" \"npm run backend\""
+  },
   "dependencies": {
     "@date-io/date-fns": "^1.3.13",
     "@emotion/react": "^11.10.5",
@@ -11,6 +16,7 @@
     "@mui/x-date-pickers": "^5.0.8",
     "chai": "^4.3.7",
     "chai-http": "^4.3.0",
+    "concurrently": "^7.6.0",
     "cors": "^2.8.5",
     "date-fns": "^2.29.3",
     "mdbreact": "^5.2.0",
