--- a/back-end/package.json
+++ b/back-end/package.json
@@ -17,6 +17,7 @@
     "chai-http": "^4.3.0",
     "cheerio": "^1.0.0-rc.12",
     "dotenv": "^16.0.3",
+    "ejs": "^3.1.8",
     "express": "^4.18.2",
     "json2csv": "^5.0.7",
     "jsonwebtoken": "^8.5.1",
