--- a/front-end/package.json
+++ b/front-end/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.1.3",
     "chart.js": "^3.9.1",
     "date-fns": "^2.29.3",
+    "dotenv": "^16.0.3",
     "material-ui-search-bar": "^1.0.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
