--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "scripts": {
     "frondend" : "cd front-end && npm start",
     "backend" : "cd back-end && npm start",
-    "start": "concurrently -n 'client,server' -c 'green,red' \"npm run frondend\" \"npm run backend\""
+    "start": "concurrently -n 'frontend,backend' -c 'green,red' \"npm run frondend\" \"npm run backend\""
   },
   "dependencies": {
     "@date-io/date-fns": "^1.3.13",
